Fixed JCT logo (made it bigger on mobile)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -687,7 +687,7 @@ footer {
     }
 
     #cercaestas {
-        margin-bottom: initial !important;
+        margin-bottom: 1.75rem !important;
     }
 
     //
