--- a/scss/projects/_projects.scss
+++ b/scss/projects/_projects.scss
@@ -220,6 +220,7 @@
         //text-decoration: underline; white-space: nowrap;
         display: inline;
         color: $primary !important;
+        white-space: pre !important;
     }
     .home {
         //text-decoration: underline; white-space: nowrap;
